force-app/main/default/objects/Cityscape__c/Cityscape__c.object-meta.xml
<CustomObject>
    <label>Cityscape</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Cityscape Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cityscape</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>