force-app/main/default/objects/Cityscape__c/fields/Client_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Email_ID__c</fullName>
    <label>Client Email-ID</label>
    <type>Email</type>
</CustomField>