force-app/main/default/objects/Cityscape__c/fields/CP_Broker_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_Broker_Agent_Name__c</fullName>
    <label>CP Broker Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>