force-app/main/default/objects/Cityscape__c/fields/Date_Of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Visit__c</fullName>
    <formula>DateValue(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Of Visit</label>
    <type>Date</type>
</CustomField>