force-app/main/default/objects/Cityscape__c/fields/Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head__c</fullName>
    <formula>Sales_Manager__r.Manager.FirstName +&apos; &apos;+ Sales_Manager__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Head</label>
    <type>Text</type>
</CustomField>