force-app/main/default/objects/Cityscape__c/fields/SC_Broker_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>SC_Broker_Agent_Name__c</fullName>
    <label>SC Broker Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>