force-app/main/default/objects/Cityscape__c/fields/SC_Broker_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>SC_Broker_Company_Name__c</fullName>
    <formula>Sobha_Connect__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Broker Company Name</label>
    <type>Text</type>
</CustomField>