force-app/main/default/objects/Cityscape__c/fields/SC_ID__c.field-meta.xml
<CustomField>
    <fullName>SC_ID__c</fullName>
    <formula>Sobha_Connect__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC ID</label>
    <type>Text</type>
</CustomField>