force-app/main/default/objects/Cityscape__c/fields/VP_Name__c.field-meta.xml
<CustomField>
    <fullName>VP_Name__c</fullName>
    <formula>Sales_Manager__r.Manager.Manager.FirstName  +&apos; &apos;+Sales_Manager__r.Manager.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VP Name</label>
    <type>Text</type>
</CustomField>