force-app/main/default/objects/Cityscape__c/validationRules/Client_Details_are_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Details_are_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(Client_Email_ID__c == null, Client_Mobile_No__c ==null, Client_Name__c ==null) , ISPICKVAL(Visit_Type__c ,&apos;Customer&apos;))</errorConditionFormula>
    <errorMessage>Client(Name,Email,Phone) Details are mandatory for customer visit.</errorMessage>
</ValidationRule>