force-app/main/default/objects/Cityscape__c/validationRules/CP_Broker_Agent_Name_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Broker_Agent_Name_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Channel_Partner__c  ==   $Label.Temp_Channel_Partner_Id  , CP_Broker_Agent_Name__c == null)</errorConditionFormula>
    <errorDisplayField>CP_Broker_Agent_Name__c</errorDisplayField>
    <errorMessage>CP Broker Agent Name is required</errorMessage>
</ValidationRule>