force-app/main/default/objects/Cityscape__c/validationRules/CRM_Name_is_mandatiry.validationRule-meta.xml
<ValidationRule>
    <fullName>CRM_Name_is_mandatiry</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Visit_Type__c , &apos;Broker&apos;) ,    ISPICKVAL(Visit_Type__c , &apos;Customer with Broker&apos;)),OR( AND( Channel_Partner__c == null,  Sobha_Connect__c == null)))</errorConditionFormula>
    <errorMessage>Please give value in Sobha Connect or Channel Partner</errorMessage>
</ValidationRule>