force-app/main/default/objects/Cityscape__c/validationRules/SC_Broker_Agent_Name_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>SC_Broker_Agent_Name_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Sobha_Connect__c ==  $Label.Temp_Sobha_Connect_ID , SC_Broker_Agent_Name__c == null)</errorConditionFormula>
    <errorDisplayField>SC_Broker_Agent_Name__c</errorDisplayField>
    <errorMessage>SC Broker Agent Name is Required</errorMessage>
</ValidationRule>