force-app/main/default/objects/Cityscape__c/validationRules/Select_either_channel_partner_or_sobha.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_either_channel_partner_or_sobha</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Sobha_Connect__c != null, Channel_Partner__c != null)</errorConditionFormula>
    <errorMessage>Select either channel partner or sobha connect, only one is enabled</errorMessage>
</ValidationRule>